finished implementing list and toString methods for printing correctly